--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ header {
   
 }
 
-#mainbody1-number {
+button.mainbody1-number {
   width: 92px;
   height: 70px;
 
@@ -95,32 +95,7 @@ header {
 
 }
 
-#mainbody1-number:hover {
-  background-color: lightgrey;
-  cursor: pointer;
-}
-
-#mainbody1-operator {
-  width: 92px;
-  height: 70px;
-
-  font-size: 25px;
-
-  border-radius: 20px;
-  border: solid black 1px;
-
-  background-color: white;
-
-  position: relative;
-  top: 20px;
-  left: 200px;
-
-  margin-top: 10px;
-
-
-}
-
-#mainbody1-operator:hover {
+button.mainbody1-number:hover {
   background-color: lightgrey;
   cursor: pointer;
 }
